# MyMap-backend

./: .gitignore  .gitmodules  01-Build.Dockerfile  Cargo.toml  Makefile  README.md
migrations/: 000_create_tables.sql  001_create_default_groups.sql
sqlxfix/: Cargo.toml  Makefile  db.sqlite
sqlxfix/src/: main.rs
src/: cli.rs  main.rs
src/db/: comments.rs  crypto.rs  files.rs  locations.rs  mod.rs  user_groups.rs  users.rs
src/db/db_sqlite/: create_tables.rs  files.rs  locations.rs  mod.rs  user_groups.rs  users.rs
src/web_srv/: mod.rs  response.rs
src/web_srv/api/: comments.rs  files.rs  locations.rs  mod.rs
src/web_srv/upload/: mod.rs  save_file.rs
src/web_srv/user/: login.rs
