[package]
name = "actix_server"
version = "0.0.1"
authors = ["James Danielson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
actix-files = "*"
actix-identity = "0.3.1"
actix-session = "0.4"
serde = "1"
clap = "3.0.5" # Args

env_logger = "0.6.1"

json = "0.12.4"
unescape = "*"

sqlite = "0.26.0"

# For file upload
futures-util = "0.3"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["v4"] }

rand = "0.8.4"
sha2 = "0.9.1"
